addons/jenkins/jenkins-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  labels:
    run: jenkins
spec:
  selector:
    run: jenkins
  ports:
  - port: 80
    targetPort: 8080
    name: http
  - port: 50000
    targetPort: 50000
    name: slave
